# oughta

./: CHANGELOG.md  README.md  oughta.cabal
.github/workflows/: doc.yml  test.yml
doc/: dev.md
src/: Oughta.hs
src/Oughta/: Exception.hs  Extract.hs  Hooks.hs  Lua.hs  LuaApi.hs  Pos.hs  Result.hs  Traceback.hs  oughta.lua
test/: Test.hs  test.lua
test-data/fail/: check-not.txt  check.txt  here.txt  reset.txt
test-data/pass/: check-empty.txt  check-immediate.txt  check-not.txt  check.txt  file.txt  for.txt  function.txt  here.txt  hereln.txt  line.txt  prelude.txt  reset.txt  source-map.txt  src-line.txt  text.txt  unicode.txt  var.txt
